code cleanup and setTemplateSlotValueType fix